implement sticky navigation using IntersectionObserver API

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./css/media-query.css" />
   </head>
   <body>
-    <header class="">
+    <header>
       <div class="logo-box">
         <img src="./images/logo.svg" alt="logo" />
       </div>
